# theo-code

./: .gitignore  .theoignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANIFEST_LLM_WIKI.md  Makefile  README.md  clippy.toml  deep-research-report.md  deny.toml  progress.md
apps/theo-benchmark/: README.md  REPORTS_MIGRATION.md  VALIDATION_LOG.md  _headless.py  _tools.py  agent_loop.py  decompose.py  feature_agent.py  loop_benchmark.sh  mentor_metrics.py  mentor_validation.py  pricing.py  pricing.toml  pyproject.toml  results.json  run_benchmark.py  swe_bench_harness.py  task_engine.py  theo_agent.py  theo_mentor.py
apps/theo-benchmark/.theo/: .gitignore  failure_patterns.json  progress.json  theo.md
apps/theo-benchmark/analysis/: __init__.py  aggregate.py  context_health.py  cost_analysis.py  derived_analysis.py  error_analysis.py  flakiness.py  latency_analysis.py  loop_analysis.py  memory_analysis.py  phase_cost_analysis.py  post_run.py  prompt_analysis.py  provenance.py  report_builder.py  stats_utils.py  subagent_analysis.py  swe_post.py  tbench_post.py  tool_analysis.py
apps/theo-benchmark/autoloop/: __init__.py  config.toml  cycle.py
apps/theo-benchmark/e2e/: __init__.py  metrics_collector.py  probe_runner.py  threshold_checker.py
apps/theo-benchmark/otlp/: collector-config.yaml  docker-compose.yml
apps/theo-benchmark/prompts/: sota-lean.md  sota-no-bench.md  sota.md
apps/theo-benchmark/reports/: evolve-log.jsonl  smoke-1776275504.json  smoke-1776275556.json  smoke-1776275616.json  smoke-1776276120.json  smoke-1776276236.json  smoke-1776276651.json  smoke-1776276827.json  smoke-1776277338.json  smoke-1776277609.json  smoke-1776277849.json  smoke-1776277979.json  smoke-1776278382.json  smoke-1776278971.json  smoke-1776280343.json  smoke-1776280519.json  smoke-1776280915.json  smoke-1776281478.json  smoke-1776285014.json  smoke-1776285364.json  smoke-1776285918.json  smoke-1776286355.json  smoke-1776286409.json  smoke-1776286413.json  smoke-1776286435.json  smoke-1776286451.json  smoke-1776286467.json  smoke-1776286846.json  smoke-1776286950.json  smoke-1776286990.json  smoke-1776287574.json  smoke-1776287927.json  smoke-1776298740.json  smoke-1777306420.json  smoke-1777306420.sota.json  smoke-1777306420.sota.md  smoke-1777316063.json  smoke-1777316063.sota.json  smoke-1777316063.sota.md  smoke-1777317567.json  (+32 more)
apps/theo-benchmark/runner/: ab_compare.py  ab_test.py  evolve.py  extract_telemetry.py  monitor.py  mutation_bank.json  smoke.py
apps/theo-benchmark/schemas/: __init__.py  benchmark-run.schema.json
apps/theo-benchmark/scripts/: extract_prompt.py  probe_llm_rerank.py  probe_query_rewrite.py
apps/theo-benchmark/swe/: adapter.py  local_instances.json  local_runner.py
apps/theo-benchmark/tbench/: __init__.py  agent.py  setup.sh
apps/theo-benchmark/tests/: test_ab_compare.py  test_ab_test.py  test_autoloop.py  test_decompose.py  test_e2e_probe.py  test_headless.py  test_metrics_collector.py  test_post_run.py  test_pricing.py  test_prompt_variants.py  test_review_fixes.py  test_schema.py  test_setup_sh.py  test_swe_harness.py  test_task_engine.py  test_theo_agent.py  test_thresholds.py
apps/theo-cli/: Cargo.toml
apps/theo-cli/benches/: streaming_markdown.rs  syntect_load.rs
apps/theo-cli/src/: cmd.rs  cmd_skill.rs  commands.rs  dashboard.rs  dashboard_agents.rs  init.rs  json_output.rs  main.rs  mcp_admin.rs  memory_lint.rs  pilot.rs  pipeline.rs  prompt_override.rs  renderer.rs  repl.rs  runtime_features.rs  subagent_admin.rs
apps/theo-cli/tests/: e2e_smoke.rs
apps/theo-desktop/: Cargo.toml  tauri.conf.json
apps/theo-desktop/capabilities/: default.json
apps/theo-desktop/src/: events.rs  lib.rs  main.rs  state.rs
apps/theo-marklive/: Cargo.toml  LICENSE
apps/theo-marklive/src/: lib.rs  main.rs  parser.rs  sidebar.rs  template.rs
crates/theo-agent-runtime/: Cargo.toml  README.md
crates/theo-agent-runtime/benches/: run_engine_bench.rs
crates/theo-agent-runtime/src/: agent_loop.rs  agent_message.rs  approval_gate.rs  autodream.rs  budget_enforcer.rs  cancellation.rs  capability_gate.rs  checkpoint.rs  compaction.rs  compaction_stages.rs  compaction_stages_tests.rs  compaction_summary.rs  config.rs  constants.rs  context_metrics.rs  convergence.rs  correction.rs  dlq.rs  doom_loop.rs  event_bus.rs  events.rs  evolution.rs  extension.rs  failure_tracker.rs  frontmatter.rs  fs_errors.rs  handoff_guardrail.rs  hooks.rs  hypothesis_pipeline.rs  jit_instructions.rs  lesson_pipeline.rs  lib.rs  lifecycle_hooks.rs  lifecycle_hooks_tests.rs  loop_state.rs  memory_lifecycle.rs  memory_reviewer.rs  metrics.rs  observability.rs  onboarding.rs  (+37 more)
crates/theo-agent-runtime/tests/: .run_engine_characterization.rs.pending-snap  cancellation_e2e.rs  compaction_sanitizer_integration.rs  e2e_auto_evolution.rs  llm_mock_smoke.rs  memory_pre_reqs.rs  memory_wiring_t0_1.rs  meta_tools_t7_3.rs  observability_e2e.rs  observability_live_probe.rs  observability_pipeline.rs  observability_tool_name_contract.rs  otlp_network_smoke.rs  resilience_t7_2.rs  resume_e2e.rs  routing_r4.rs  run_engine_characterization.rs  run_engine_routing.rs  security_t7_1.rs  sota12_integration.rs  sota_integration.rs  state_manager_failure.rs  subagent_characterization.rs
crates/theo-application/: Cargo.toml
crates/theo-application/src/: facade.rs  lib.rs
crates/theo-application/tests/: bench_real_repos.rs  read_real_trajectory.rs  sota12_dashboard.rs  test_impact.rs
crates/theo-domain/: Cargo.toml
crates/theo-domain/src/: agent_run.rs  agent_spec.rs  budget.rs  capability.rs  clock.rs  code_intel.rs  environment.rs  episode.rs  episode_tests.rs  error.rs  (+36 more)
crates/theo-engine-graph/: Cargo.toml
crates/theo-engine-parser/: Cargo.toml
crates/theo-engine-retrieval/: Cargo.toml  README.md
crates/theo-engine-wiki/: Cargo.toml  README.md
crates/theo-governance/: Cargo.toml
crates/theo-infra-auth/: Cargo.toml
crates/theo-infra-llm/: Cargo.toml
crates/theo-infra-mcp/: Cargo.toml
crates/theo-infra-memory/: Cargo.toml
crates/theo-tooling/: Cargo.toml  README.md
(+1392 files in other folders)
