[workspace]
members = [
    "crates/theo-domain",
    "crates/theo-engine-graph",
    "crates/theo-engine-retrieval",
    "crates/theo-governance",
    "crates/theo-engine-parser",
    "crates/theo-tooling",
    "crates/theo-infra-llm",
    "crates/theo-agent-runtime",
    "crates/theo-infra-auth",
    "crates/theo-api-contracts",
    "crates/theo-application",
    "apps/theo-desktop",
    "apps/theo-cli",
    "apps/theo-marklive",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
theo-domain = { path = "crates/theo-domain" }
theo-engine-graph = { path = "crates/theo-engine-graph" }
theo-engine-retrieval = { path = "crates/theo-engine-retrieval" }
theo-governance = { path = "crates/theo-governance" }
theo-engine-parser = { path = "crates/theo-engine-parser" }
theo-tooling = { path = "crates/theo-tooling" }
theo-infra-llm = { path = "crates/theo-infra-llm" }
theo-agent-runtime = { path = "crates/theo-agent-runtime" }
theo-infra-auth = { path = "crates/theo-infra-auth" }
theo-api-contracts = { path = "crates/theo-api-contracts" }
theo-application = { path = "crates/theo-application" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tempfile = "3"
glob = "0.3"
grep-regex = "0.1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
similar = "2"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
log = "0.4"
landlock = "0.4"
libc = "0.2"
rustyline = "15"
ratatui = "0.29"
tui-textarea = "0.7"
crossterm = "0.28"
pulldown-cmark = "0.13"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
textwrap = { version = "0.16", features = ["terminal_size"] }
comfy-table = "7"
dirs = "5"
insta = { version = "1", features = ["yaml"] }
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
toml = "0.8"
rayon = "1"
bincode = "1"
scip = "0.5"
protobuf = "3"
tantivy = "0.22"
blake3 = "1"
