[project]
name = "theo-benchmark"
version = "0.1.0"
description = "Evaluation harness for Theo Code AI agent"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0,<4.0",
    "requests>=2.31,<3.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
swe-grader = [
    "swebench>=2.1,<3.0",
    "docker>=7.0,<8.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-timeout>=2.2,<3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests that need the theo binary or network",
    "integration: marks tests that run theo --headless",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
