[package]
name = "theo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# T1.2: apps depend only on theo-application + theo-api-contracts + theo-domain
# per the architecture contract (ADR-010). Lower-layer crates reach apps
# through the `theo_application::facade` module.
theo-domain.workspace = true
theo-application.workspace = true
# Track A/C/D: admin CLI commands (subagent/checkpoints/agents) call directly
# into runtime-side stores. This is an explicit exception to ADR-010 for
# operational tooling that doesn't go through the use_cases pipeline.
theo-agent-runtime.workspace = true
tokio.workspace = true
async-trait.workspace = true
clap.workspace = true
rustyline.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
pulldown-cmark.workspace = true
syntect.workspace = true
indicatif.workspace = true
console.workspace = true
dialoguer.workspace = true
textwrap.workspace = true
comfy-table.workspace = true
dirs.workspace = true
toml.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
tui-textarea.workspace = true
futures = "0.3"
anyhow = "1"
similar.workspace = true
chrono = "0.4"
reqwest.workspace = true
axum.workspace = true
tower-http.workspace = true
# sota-gaps Phase 15: SSE stream for /api/agents/events.
async-stream = "0.3"

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
criterion.workspace = true
# T5.5 — CLI smoke tests
assert_cmd = "2"
predicates = "3"
# sota-gaps Phase 15: axum endpoint tests use tower::ServiceExt::oneshot
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[[bench]]
name = "streaming_markdown"
harness = false

[[bench]]
name = "syntect_load"
harness = false

[features]
default = ["tantivy-backend"]
tantivy-backend = ["theo-application/tantivy-backend"]
dense-retrieval = ["theo-application/dense-retrieval"]
# Phase 40 (otlp-exporter-plan) — passthrough to theo-application/otel.
# When active, theo-cli main() initializes the OTLP exporter at startup
# (only if OTLP_ENDPOINT env var is set; absent → no-op).
otel = ["theo-application/otel", "theo-agent-runtime/otel"]
