[package]
name = "theo-code-desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "theo_code_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
theo-agent-runtime = { path = "../../crates/theo-agent-runtime" }
theo-domain = { path = "../../crates/theo-domain" }
theo-infra-auth = { path = "../../crates/theo-infra-auth" }
theo-infra-llm = { path = "../../crates/theo-infra-llm" }
theo-tooling = { path = "../../crates/theo-tooling" }
theo-api-contracts = { path = "../../crates/theo-api-contracts" }
theo-application = { path = "../../crates/theo-application" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
