[package]
name = "theo-code-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "theo_code_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# T1.3: apps depend only on theo-application + theo-api-contracts + theo-domain
# per the architecture contract (ADR-010). Lower-layer crates reach the
# desktop via `theo_application::facade`.
theo-domain = { path = "../../crates/theo-domain" }
theo-api-contracts = { path = "../../crates/theo-api-contracts" }
theo-application = { path = "../../crates/theo-application" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
