[package]
name = "theo-marklive"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Beautiful markdown wiki viewer — generates self-contained HTML from markdown directories"
repository = "https://github.com/usetheo/theo-marklive"
keywords = ["markdown", "wiki", "viewer", "documentation", "html"]
categories = ["command-line-utilities", "text-processing"]

[lib]
name = "theo_marklive"
path = "src/lib.rs"

[[bin]]
name = "theo-marklive"
path = "src/main.rs"

[dependencies]
pulldown-cmark.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
