[package]
name = "theo-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theo-domain.workspace = true
theo-tooling.workspace = true
theo-infra-llm = { path = "../theo-infra-llm" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures = "0.3"
theo-infra-auth = { path = "../theo-infra-auth" }
toml.workspace = true
regex = { workspace = true }
indexmap.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tokio-util.workspace = true
dashmap.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
theo-isolation.workspace = true
theo-infra-mcp.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
proptest = { workspace = true }

[features]
default = []
# Phase 12 — OpenTelemetry GenAI emission. Currently opt-in (no-op flag);
# wires real opentelemetry crate when consumers compile with --features otel.
otel = []
