[package]
name = "theo-agent-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theo-domain.workspace = true
theo-tooling.workspace = true
theo-infra-llm.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures = "0.3"
theo-infra-auth.workspace = true
toml.workspace = true
regex = { workspace = true }
indexmap.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
libc.workspace = true
tokio-util.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
theo-isolation.workspace = true
theo-infra-mcp.workspace = true
# Structured logging — used by `publish_state_append_failure` and the
# T3.7 migration away from `eprintln!`.
tracing.workspace = true
# Phase 40 (otlp-exporter-plan) — OTel SDK, gated by feature `otel`.
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
proptest = { workspace = true }
# T0.1 — snapshot-based characterization tests for run_engine event sequences.
insta = { workspace = true }
parking_lot = { workspace = true }
# T7.4 — baseline benchmarks (run with `cargo bench -p theo-agent-runtime`).
criterion = { workspace = true }
# Phase 42 (otlp-exporter-plan) — InMemorySpanExporter for unit tests.
# Only loaded when --features otel is on (cfg-gated tests).
opentelemetry_sdk = { workspace = true, features = ["testing", "rt-tokio"] }

[[bench]]
name = "run_engine_bench"
harness = false

[features]
default = []
# Phase 40 (otlp-exporter-plan) — OpenTelemetry GenAI emission via OTLP.
# Activates `otel_exporter` and `otel_listener` modules + pulls in the
# real opentelemetry SDK. Default builds are zero-overhead (D1).
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
]
