[package]
name = "theo-application"
version.workspace = true
edition.workspace = true

[dependencies]
theo-domain.workspace = true
theo-agent-runtime.workspace = true
theo-tooling.workspace = true
theo-api-contracts.workspace = true
theo-engine-graph.workspace = true
theo-engine-parser.workspace = true
theo-engine-retrieval.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
ignore.workspace = true
theo-governance.workspace = true
theo-infra-llm.workspace = true
rayon.workspace = true
bincode.workspace = true
blake3.workspace = true

[features]
default = []
tantivy-backend = ["theo-engine-retrieval/tantivy-backend"]
dense-retrieval = ["tantivy-backend", "theo-engine-retrieval/dense-retrieval"]

[dev-dependencies]
tempfile.workspace = true
