[package]
name = "theo-application"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theo-domain.workspace = true
theo-agent-runtime.workspace = true
theo-tooling.workspace = true
theo-api-contracts.workspace = true
theo-engine-graph.workspace = true
theo-engine-parser.workspace = true
theo-engine-retrieval.workspace = true
theo-isolation.workspace = true
theo-infra-mcp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
async-trait.workspace = true
ignore.workspace = true
theo-governance.workspace = true
theo-infra-auth = { path = "../theo-infra-auth" }
theo-infra-llm.workspace = true
theo-infra-memory.workspace = true
rayon.workspace = true
bincode.workspace = true
blake3.workspace = true
sha2 = "0.10"

[features]
default = []
tantivy-backend = ["theo-engine-retrieval/tantivy-backend"]
dense-retrieval = ["tantivy-backend", "theo-engine-retrieval/dense-retrieval"]

[dev-dependencies]
tempfile.workspace = true
