[package]
name = "theo-engine-graph"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

bincode = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25"
rayon = "1"
ignore.workspace = true

[dev-dependencies]
tempfile.workspace = true
