[package]
name = "theo-engine-graph"
version.workspace = true
edition.workspace = true

[dependencies]
theo-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

bincode = "1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25"
rayon = "1"
ignore.workspace = true

# SCIP integration (optional — requires rust-analyzer)
scip = { workspace = true, optional = true }
protobuf = { workspace = true, optional = true }

[features]
scip = ["dep:scip", "dep:protobuf"]

[dev-dependencies]
tempfile.workspace = true
