[package]
name = "theo-engine-parser"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tree-sitter = "0.26"
tree-sitter-c = "0.24"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24"
tree-sitter-scala = "0.24"
tree-sitter-swift = "0.7.1"
tree-sitter-typescript = "0.23.2"
rayon = "1"
walkdir = "2"
ignore = "0.4"
glob = "0.3"
serde_yaml = "0.9"
toml = "0.8"
sha2 = "0.10"

[dev-dependencies]
tempfile.workspace = true
