[package]
name = "theo-engine-retrieval"
version.workspace = true
edition.workspace = true

[dependencies]
theo-domain.workspace = true
theo-engine-graph = { path = "../theo-engine-graph" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
fastembed = "4"
tantivy = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

[features]
scip = ["theo-engine-graph/scip"]
tantivy-backend = ["tantivy"]
dense-retrieval = ["tantivy-backend", "bincode"]
reranker = ["dense-retrieval"]

[dev-dependencies]
tempfile.workspace = true
theo-application.workspace = true
theo-marklive = { path = "../../apps/theo-marklive" }
