[package]
name = "theo-engine-retrieval"
version.workspace = true
edition.workspace = true

[dependencies]
theo-domain.workspace = true
theo-engine-graph = { path = "../theo-engine-graph" }
theo-engine-parser = { path = "../theo-engine-parser" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
# Use rustls so this crate's transitive hf-hub does not pull native-tls
# (openssl-sys), matching the workspace-wide reqwest configuration.
# `online` implies `hf-hub-native-tls` (openssl) — omit it; rustls-tls on
# hf-hub already enables downloads over HTTPS without pulling openssl-sys.
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
tantivy = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }

[features]
scip = ["theo-engine-graph/scip"]
tantivy-backend = ["tantivy"]
dense-retrieval = ["tantivy-backend", "bincode"]
reranker = ["dense-retrieval"]

[dev-dependencies]
tempfile.workspace = true
theo-application.workspace = true
theo-marklive = { path = "../../apps/theo-marklive" }
