[package]
name = "theo-engine-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theo-domain.workspace = true
theo-engine-graph = { path = "../theo-engine-graph" }
theo-engine-parser = { path = "../theo-engine-parser" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
# Use rustls so this crate's transitive hf-hub does not pull native-tls
# (openssl-sys), matching the workspace-wide reqwest configuration.
# `online` implies `hf-hub-native-tls` (openssl) — omit it; rustls-tls on
# hf-hub already enables downloads over HTTPS without pulling openssl-sys.
fastembed = { version = "4", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
tantivy = { workspace = true, optional = true }
bincode = { workspace = true }

[features]
scip = ["theo-engine-graph/scip"]
tantivy-backend = ["tantivy"]
dense-retrieval = ["tantivy-backend"]
# T8.1 — `reranker` is always compiled (fastembed is non-optional);
# whether to USE it at runtime is gated by config (RetrievalConfig.use_reranker),
# not by build features. The legacy `reranker` feature is retained as an
# alias of `dense-retrieval` so existing crate consumers don't break.
reranker = ["dense-retrieval"]

[dev-dependencies]
tempfile.workspace = true
theo-application.workspace = true
theo-marklive = { path = "../../apps/theo-marklive" }
