[package]
name = "theo-engine-wiki"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theo-domain.workspace = true
theo-engine-graph = { workspace = true }
theo-engine-parser = { workspace = true }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
walkdir.workspace = true
glob.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
