[package]
name = "theo-infra-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
theo-domain.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["process", "io-util", "time", "macros", "net", "rt", "sync"] }
async-trait.workspace = true
# Phase 35 (mcp-http-and-discover-flake) — HTTP/Streamable transport.
reqwest.workspace = true
futures = "0.3"

[dev-dependencies]
tempfile.workspace = true
