[package]
name = "theo-infra-memory"
version.workspace = true
edition.workspace = true

[dependencies]
theo-domain.workspace = true
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
futures = "0.3"
sha2 = "0.10"
theo-engine-retrieval = { workspace = true, optional = true }

[features]
default = []
tantivy-backend = ["theo-engine-retrieval/tantivy-backend"]

[dev-dependencies]
theo-test-memory-fixtures.workspace = true
theo-engine-retrieval = { workspace = true, features = ["tantivy-backend"] }
