[package]
name = "theo-tooling"
version.workspace = true
edition.workspace = true

[dependencies]
theo-domain.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
regex.workspace = true
reqwest.workspace = true
similar.workspace = true
walkdir.workspace = true
ignore.workspace = true
glob.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
